--- a/frontend/src/scss/abstracts/_breakpoints.scss
+++ b/frontend/src/scss/abstracts/_breakpoints.scss
@@ -1,4 +1,5 @@
 // small - 576px
 // medium - 768px
-// large - 1440px
-$breakpoints: (small: 36em, medium: 48em, large: 90em);
+// large - 992px
+// xlarge - 1440px
+$breakpoints: (small: 36em, medium: 48em, large: 62em, xlarge: 90em);
