--- a/frontend/src/scss/layout/_buttons.scss
+++ b/frontend/src/scss/layout/_buttons.scss
@@ -7,7 +7,7 @@
 }
 
 .btn {
-	margin-top: em(10);
+	margin-top: em(14);
 }
 
 .btn-link {
@@ -16,7 +16,7 @@
 }
 
 .btn--icon {
-	padding: em(8);
+	padding: em(5);
 	margin-top: 0px;
 }
 
