--- a/frontend/src/scss/layout/_container.scss
+++ b/frontend/src/scss/layout/_container.scss
@@ -3,7 +3,7 @@
 
 /* container */
 .container {
-	max-width: 1120px;
+	max-width: 1132px;
 	margin: 0 auto;
 	@include breakpoint(medium, max-width) {
 		padding: 0px em(32);
