--- a/frontend/src/scss/layout/_index.scss
+++ b/frontend/src/scss/layout/_index.scss
@@ -13,4 +13,5 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin-right: 1em;
 }
