--- a/frontend/src/scss/theme/_input.scss
+++ b/frontend/src/scss/theme/_input.scss
@@ -5,7 +5,7 @@ $input-font-size-sm: rem(12);
 $input-padding-y: em(6);
 $input-padding-x: em(15);
 $input-padding-x-sm: em(10);
-$input-padding-y-sm: em(7);
+$input-padding-y-sm: em(10);
 
 $border-radius: $br-primary;
 $border-radius-sm: $br-sm;
