--- a/frontend/src/scss/theme/_typography.scss
+++ b/frontend/src/scss/theme/_typography.scss
@@ -1,4 +1,5 @@
 @use '../abstracts' as *;
+@use '../layout' as *;
 
 // Fonts
 $font-family-sans-serif: $font-body;
@@ -7,7 +8,7 @@ $small-font-size: $small;
 $display-font-weight: $fw-bold;
 $headings-font-family: $font-heading;
 $headings-font-weight: $fw-semi-bold;
-$headings-margin-bottom: rem(43);
+$headings-margin-bottom: $heading-spacer;
 $line-height-base: 1.4;
 $display-line-height: 1;
 $nav-link-font-size: $small;
